2011-03-03  David Cote  <david.cote@cern.ch>
	* Added NTUP_PHOTON to ProdSys ListOfDefaultPositionalKeys in Reco_trf
	* tagging PATJobTransforms-00-03-16

2011-03-09 Susumu Oda <Susumu.Oda@cern.ch>
	* Add 'r2e' to AddOutputNTUP_SCTFile.subSteps of python/Configuration.py
	  (requested by Yuriy Pylypchenko)
	* tagging PATJobTransforms-00-03-15  

2011-03-04 Walter Lampl <walter.lampl@ cern.ch>
	* Add new output file: outputNUTP_FASTMONFile for Fast Physics Monitoring 
	  + necessary modification to AOD->DPD skeleton
	* tagging PATJobTransforms-00-03-14

2011-03-03  David Cote  <david.cote@cern.ch>
	* Added outputNTUP_L1CALOPROBFile and outputNTUP_L1CALOFile to ProdSys ListOfDefaultPositionalKeys
	* tagging PATJobTransforms-00-03-13

2011-03-03  John Chapman  <John.Chapman@cern.ch>
	* scripts/Merging_trf.py - added outputHitsFile to ListOfDefaultPositionalKeys.
	* tagging PATJobTransforms-00-03-12

2011-03-03  David Cote  <david.cote@cern.ch>
	* Added --uploadtoami arg in Configuration.py
	* Fixed syntax error in include("TrigCostAthena/ESDtoNTUP_ENHBIAS.py")
	* Tagging as PATJobTransforms-00-03-11

2011-02-25 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Fixed a small inconsistency between skeleton.AODtoDPD_trf.py
	  and skeleton.ESDtoDPD_trf.py. (Had to modify the ESD one.)
	* Tagging as PATJobTransforms-00-03-10

2011-02-25  David Cote  <david.cote@cern.ch>
	* Added outputNTUP_ENHBIASFile for e2a and e2d, also to ListOfDefaultPositionalKeys
	* tagging PATJobTransforms-00-03-09

2011-02-25 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Slightly modified shared/skeleton.AODtoDPD_trf.py and
	  share/skeleton.ESDtoDPD_trf.py to make use of the new setup of
	  the D3PDMakerConfig package.
	* These skeletons now make use of the two different kinds of
	  D3PD setup options.
	* Tagging as PATJobTransforms-00-03-08

2011-02-22  Karsten Koeneke  <kkoeneke@lxplus302.cern.ch>
